modified:   cell01/ex01/piscineweb.html 	modified:   cell01/ex02/piscineweb.html 	modified:   cell01/ex03/piscineweb.html 	modified:   cell01/ex04/basics.html 	modified:   cell01/ex05/tab.html 	new file:   cell01/ex06/responsive.html

--- a/cell01/ex02/piscineweb.html
+++ b/cell01/ex02/piscineweb.html
@@ -1,11 +1,20 @@
-<html>
-    <head>
-    </head>
-         <body>
-        <h1 Align=center>Piscine Web</h1>
-        <center>
-            <img src=https://img.freepik.com/free-vector/simple-sad-cat-square-meme_742173-6184.jpg?t width= 400 height=400>
-            <img src=https://img.freepik.com/free-vector/funny-serious-cat-animal-meme_23-2148974916.jpg?t width= 500 height=500>
- </center>
-        </body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <center>
+      <h1 style="font-weight: bold">Piscine Web</h1>
+      <img
+        src="https://img.freepik.com/free-vector/funny-serious-cat-animal-meme_23-2148974916.jpg?t"
+      />
+      <img
+        src="https://img.freepik.com/free-vector/funny-serious-cat-animal-meme_23-2148974916.jpg?t"
+      />
+    </center>
+  </body>
 </html>
