--- a/cell01/ex03/piscineweb.html
+++ b/cell01/ex03/piscineweb.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
-<html>
-    <head>
-    </head>
-       <body>
-           <h1 Align=center>Piscine Web</h1>
-           <center>
-               <a  href=https://www.youtube.com/watch?v=Isvqg90LhqM target=_blank><img src=https://img.freepik.com/free-vector/simple-sad-cat-square-meme_742173-6184.jpg?t width=400 height=400></a>
-               <img src=https://img.freepik.com/free-vector/simple-sad-cat-square-meme_742173-6184.jpg?t width=500 height=350>
-           </center>
-
-       </body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <center>
+      <h1 style="font-weight: bold">Piscine Web</h1>
+      <a href="https://www.youtube.com/watch?v=INscMGmhmX4">
+        <img
+          src="https://img.freepik.com/free-vector/funny-serious-cat-animal-meme_23-2148974916.jpg?t"
+        />
+      </a>
+      <img
+        src="https://img.freepik.com/free-vector/funny-serious-cat-animal-meme_23-2148974916.jpg?t"
+      />
+    </center>
+  </body>
 </html>
