--- a/cell01/ex04/basics.html
+++ b/cell01/ex04/basics.html
@@ -1,22 +1,46 @@
-<html>
-<head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Basics</title>
-    <style>
-    body {background-color: pink;}
-    h1 {color: rgb(24, 2, 2)}
-    </style>
-</head>
-<body>
-    <h1 style="text-align: center; font-size: 120px">&#8364; Otter&Pug Lover &#8364;</h1>
-    <center>
-         <a href="https://www.freepik.com/free-photos-vectors/cat-meme" width=400 height=400 >
-            <img src=https://img.freepik.com/free-vector/funny-serious-cat-animal-meme_23-2148974916.jpg?t width=400 height=400></a>
-        <a href=https://tenor.com/search/cat-memes-gifs
-        <img src=https://img.freepik.com/free-vector/simple-sad-cat-square-meme_742173-6184.jpg?t width=400 height=400>
-        </a>
+  </head>
+  <style>
+    body {
+      background-color: pink;
+    }
+  </style>
+  <body>
+    <div style="width: 100%">
+      <h1 style="color: #fff; text-align: center; font-weight: bold">
+        &diams; Janrainjer &diams;
+      </h1>
+      <div style="text-align: center; display: flex; justify-content: center">
+        <div>
+          <img
+            src="https://img.freepik.com/free-vector/simple-sad-cat-square-meme_742173-6184.jpg?t"
+            width="300"
+          />
+          <br />
+          <a href="https://tenor.com/search/cat-memes-gifs">JIB</a>
+        </div>
+        <div>
+          <img
+            src="https://img.freepik.com/free-vector/funny-serious-cat-animal-meme_23-2148974916.jpg?t"
+            width="300"
+          />
+          <br />
+          <a
+            href="https://www.freepik.com/free-photos-vectors/cat-meme"
+            >Advice</a
+          >
+        </div>
+      </div>
+      <br/>
+      <hr style="border: 1px solid #000;" />
 
-    </center>
-    <hr>
-    <p style="font-style: italic; text-align: right; font: monospace; "> &#169;Otter&Pug Lover</p>
-</body>
+      <p style="text-align: right; font-family: monospace; font-style: italic;">&copy; shiranth 2022</p>
+    </div>
+  </body>
 </html>
