--- a/cell01/ex05/tab.html
+++ b/cell01/ex05/tab.html
@@ -1,31 +1,25 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Tab</title>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
   <style>
-    table {
-      width: 100%;
-    }
-    td {
-      padding: 20px;
-      text-align: center;
-    }
-    td:first-child {
-      background-color: #b0d480;
-    }
-    td:last-child {
-      background-color: #f1bdb8;
+    body {
+      margin: 0;
     }
   </style>
-</head>
-<body>
 
-  <table>
-    <tr>
-      <td>First cell</td>
-      <td>Second cell</td>
-    </tr>
-  </table>
-
-</body>
+  <body>
+    <div style="width: 100%; display: flex">
+      <div style="background-color: rgb(186, 243, 205); width: 100%; padding: 10px">
+        First cell
+      </div>
+      <div style="background-color: rgb(236, 189, 197); width: 100%; padding: 10px">
+        Secondary
+      </div>
+    </div>
+  </body>
 </html>
