modified:   cell01/ex04/basics.html 	modified:   cell01/ex05/tab.html 	modified:   cell01/ex06/responsive.html 	new file:   cell02/ex00/responsive.css 	new file:   cell02/ex00/responsive.html

--- a/cell01/ex04/basics.html
+++ b/cell01/ex04/basics.html
@@ -13,8 +13,8 @@
   </style>
   <body>
     <div style="width: 100%">
-      <h1 style="color: #fff; text-align: center; font-weight: bold">
-        &diams; Janrainjer &diams;
+      <h1 style="color: #ffffff; text-align: center; font-weight: bold">
+        &diams; IMSE &diams; 
       </h1>
       <div style="text-align: center; display: flex; justify-content: center">
         <div>
@@ -23,7 +23,7 @@
             width="300"
           />
           <br />
-          <a href="https://tenor.com/search/cat-memes-gifs">JIB</a>
+          <a href="https://tenor.com/search/cat-memes-gifs">CAT</a>
         </div>
         <div>
           <img
@@ -33,14 +33,14 @@
           <br />
           <a
             href="https://www.freepik.com/free-photos-vectors/cat-meme"
-            >Advice</a
+            >cat-meme</a
           >
         </div>
       </div>
       <br/>
       <hr style="border: 1px solid #000;" />
 
-      <p style="text-align: right; font-family: monospace; font-style: italic;">&copy; shiranth 2022</p>
+      <p style="text-align: right; font-family: monospace; font-style: italic;">&copy; IMSE 2025/p>
     </div>
   </body>
 </html>
