--- a/cell01/ex05/tab.html
+++ b/cell01/ex05/tab.html
@@ -14,10 +14,10 @@
 
   <body>
     <div style="width: 100%; display: flex">
-      <div style="background-color: rgb(186, 243, 205); width: 100%; padding: 10px">
+      <div style="background-color: aquamarine; width: 100%; padding: 10px">
         First cell
       </div>
-      <div style="background-color: rgb(236, 189, 197); width: 100%; padding: 10px">
+      <div style="background-color: pink; width: 100%; padding: 10px">
         Secondary
       </div>
     </div>
