--- a/cell01/ex06/responsive.html
+++ b/cell01/ex06/responsive.html
@@ -23,10 +23,10 @@
       height: 100vh;
     }
     .b1 {
-      background-color: rgb(186, 243, 205);
+      background-color: aquamarine;
     }
     .b2 {
-      background-color: rgb(236, 189, 197);
+      background-color: pink;
     }
   </style>
 
