modified:   cell03/ex04/ex00bis/backgroound.css 	modified:   cell03/ex04/ex00bis/backgroound.html 	new file:   cell03/ex04/ex00bis/jQuery.js

--- a/cell03/ex04/ex00bis/backgroound.html
+++ b/cell03/ex04/ex00bis/backgroound.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="backgroound.css">
     <script
-      src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="crossorigin="anonymous"
-    ></script>
+      src="jQuery.js" ></script>
+
   </head>
   <body>
     <div>
@@ -21,4 +22,3 @@
     });
   </script>
 </html>
-#EX00bis
