--- a/cell03/ex01/balloon.html
+++ b/cell03/ex01/balloon.html
@@ -17,6 +17,7 @@
       margin-left: auto;
       margin-right: auto;
       margin-top: 200px;
+      transition: width 0.5 , height 0.5  , background-color 0.5s;
     }
   </style>
   <body>
