modified:   cell03/ex04/ex01bis/balloon.html 	modified:   cell03/ex04/ex02bis/calc.css 	modified:   cell03/ex04/ex02bis/calc.html 	modified:   cell03/ex04/ex02bis/calc.js 	modified:   cell03/ex04/ex03bis/index.css 	modified:   cell03/ex04/ex03bis/index.html 	modified:   cell03/ex04/ex03bis/index.js 	new file:   cell04/1/1.css 	new file:   cell04/1/1.html 	new file:   cell04/1/1.js

--- a/cell03/ex04/ex02bis/calc.html
+++ b/cell03/ex04/ex02bis/calc.html
@@ -58,7 +58,7 @@
       }
       if (isNaN(ans)) {
         console.log("Vegeta!! It's Over 9000!");
-        alert("Vegeta!! It's Over 9000!!");
+        alert("Vegeta!! It's over 9000!");
       } else {
         console.log(ans);
         alert(ans);
