--- a/cell03/ex04/ex00bis/backgroound.html
+++ b/cell03/ex04/ex00bis/backgroound.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link href="backgroound.css" rel="stylesheet">
     <script
-      src="jQuery.js" ></script>
+      src="https://code.jquery.com/jquery-3.7.1.js" ></script>
 
   </head>
   <body>
