--- a/cell03/ex04/ex01bis/balloon.html
+++ b/cell03/ex04/ex01bis/balloon.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script
-      src="jQuery.js"></script>
+      src="https://code.jquery.com/jquery-3.7.1.js"></script>
   </head>
   <style>
     .container {
@@ -21,8 +21,7 @@
       margin-left: auto;
       margin-right: auto;
       margin-top: 200px;
-      transition: width 0.4s ease, height 0.4s ease, background-color 0.4s ease, box-shadow 0.3s ease;
-            cursor: pointer;
+      
             
     }
   </style>
