--- a/cell03/ex04/ex03bis/index.html
+++ b/cell03/ex04/ex03bis/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script
-      src="jQuery.js"></script>
+      src="https://code.jquery.com/jquery-3.7.1.js"></script>
       <script src="calc.js"></script>
-      <link href="index.css" rel="stylesheet" />
   </head>
   <style>
     #ft_list > div {
@@ -17,10 +16,54 @@
       padding: 10px;
       border-radius: 10px;
       cursor: pointer;
+      font-size: 20px;
+      transition: background-color 0.3s ease, box-shadow 0.3s ease;
     }
     #ft_list > div:hover {
       background-color: #ad4ea9;
     }
+
+    #create {
+      background-color: rgb(255, 255, 255);
+      color : rgb(0, 0, 0);
+      margin-top: 20px;
+    }
+
+    #create:hover {
+      background-color: blanchedalmond;
+      transform: translateY(-2px);
+    }
+
+    body{
+      font-family: 'Georgia',sans-serif;
+      background-color: rgb(255, 191, 191);
+      display: flex;
+      justify-content: center;
+      min-height: 100vh;
+      margin: 0;
+    }
+    .container-fluid {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+        }
+
+        .container {
+            text-align: auto;
+            background-color: #a36c6c;
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            max-width: 80%;
+            margin-top: 20px;
+        }
+
+        h1 {
+            color: white;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+            margin-bottom: 20px;
+            text-align: center;
+        }
   </style>
   <body>
     <div style="width: 100%; text-align: center">
@@ -46,7 +89,7 @@
         }
 
         function deleteCookie(name) {
-            document.cookie = `${name}=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;`;
+            document.cookie = `${name}=; expires=Thu, 01 Jan 2026 00:00:00 UTC; path=/;`;
         }
 
         $("#create").click(() => {
@@ -87,3 +130,4 @@
     });
 </script>
 </html>
+
