renamed:    cell03/ex04/ex03bis/index.js -> cell03/ex04/ex03bis/todo.js 	deleted:    cell04/1/1.css 	new file:   cell04/1/G.css 	new file:   cell04/1/K.css 	new file:   cell04/1/Main.css 	new file:   cell04/1/Main.html 	renamed:    cell04/1/1.html -> cell04/1/Resume G.html 	new file:   cell04/1/Resume K.html

--- a/cell04/1/Resume G.html
+++ b/cell04/1/Resume G.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="1.js"></script>
-      <link href="1.css" rel="stylesheet" />
+      <link href="G.css" rel="stylesheet" />
       <body>
         </header>
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTCBeXc-Wk3U8XWUq4DzPgDRGzce3OxN4r58Q&s" alt="testimg">
@@ -23,14 +23,15 @@
         <article>
             <div class="aboutus" id="aboutus">
                 <p></p><h1 class="underline">About Me</h1></p>
-                <p> Name : Papangkorn Changnoi </p>
+                <p> Name : xyc abc </p>
                 <p> Age : 20 </p>
                 <p> Nationality : Thai </p>
                 <p> Height : 175 </p>
                 <p> Weight : 80 </p>
                 <hr>
                 <p> Occupation : Student </p>
-            </div>"
+            </div>
+            
             <div class="education" id="education">
                 <p><h1 class = "underline" style="color:rgb(0, 0, 0);" >Education</h1></p>
                 <table>
@@ -71,9 +72,9 @@
 
             <div class ="contact" id = "comtact">
                 <p><h1 class = underline> Contact</h1></p>
-                <p> Mobile : 087-8888888 </p>
-                <p> E-mail : 12365498@kmitl.ac.th </p>
-                <p> ID Line : IMSE.19 </p>
+                <p> Mobile : 087-777777 </p>
+                <p> E-mail : 987654321@kmitl.ac.th </p>
+                <p> ID Line : IMSE.31 </p>
                 <hr>
             </div>
         </article>
