modified:   cell04/1/K.css 	modified:   cell04/1/Resume K.html

--- a/cell04/1/Resume K.html
+++ b/cell04/1/Resume K.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTCBeXc-Wk3U8XWUq4DzPgDRGzce3OxN4r58Q&s" alt="Profile Picture">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTCBeXc-Wk3U8XWUq4DzPgDRGzce3OxN4r58Q&s" alt="Pro">
         <h1>Papangkorn Changnoi</h1>
     </header>
     <nav>
@@ -34,6 +34,7 @@
             <p><strong>Weight:</strong> 80 kg</p>
             <hr>
             <p><strong>Occupation:</strong> Student</p>
+            <hr>
         </section>
         <section id="education">
             <h1>Education</h1>
@@ -55,12 +56,14 @@
             <p><strong>Music Programs:</strong> Cubase, Reaper, FL Studio, BandLab</p>
             <hr>
             <p><strong>Hobbies:</strong> Playing Musical Instruments, Singing, Songwriting</p>
+            <hr>
         </section>
         <section id="contact">
             <h1>Contact</h1>
             <p><strong>Mobile:</strong> 087-8888888</p>
             <p><strong>E-mail:</strong> 12365498@kmitl.ac.th</p>
             <p><strong>ID Line:</strong> IMSE.19</p>
+            <hr>
         </section>
     </article>
     <footer>
