modified:   cell04/1/G.css 	modified:   cell04/1/K.css 	modified:   cell04/1/Main.css 	modified:   cell04/1/Main.html 	modified:   cell04/1/Resume G.html 	modified:   cell04/1/Resume K.html

--- a/cell04/1/Main.html
+++ b/cell04/1/Main.html
@@ -6,6 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="1.js"></script>
-    <link rel="stylesheet" href="Main.css">
-    <a href="Resume K.html">Resume Kal</a>
-    <a href="Resume G.html">Resume Guy</a>
+      <link href="Main.css" rel="stylesheet" />
+      <body>
+        </header>
+    </style>
+</head>
+<body>
+    <header>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTCBeXc-Wk3U8XWUq4DzPgDRGzce3OxN4r58Q&s" alt="Pro">
+        <h1>Resume IMSE</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#Resume G">Guy</a></li>
+            <li><a href="#Resume K">Pchangno</a></li>
+        </ul>
+    </nav>
