deleted:    cell03/ex04/ex02bis/calc.css 	modified:   cell03/ex04/ex02bis/calc.html 	modified:   cell03/ex04/ex03bis/index.html 	modified:   cell04/1/G.css

--- a/cell03/ex04/ex03bis/index.html
+++ b/cell03/ex04/ex03bis/index.html
@@ -71,7 +71,7 @@
       <h1>TO DO LIST</h1>
       <div
         style="margin-left: 500; margin-right: 500; padding: 30px" id="ft_list"></div>
-      <button id="create"> NEW List!!</button>
+      <button id="create"> NEW</button>
     </div>
     <script src="todo.js"></script>
   </body>
