--- a/cell03/ex04/ex02bis/calc.html
+++ b/cell03/ex04/ex02bis/calc.html
@@ -7,10 +7,72 @@
     <title>Document</title>
     <script
       src="https://code.jquery.com/jquery-3.7.1.js" ></script>
-    <link href="calc.css" rel="stylesheet" />
-    <script src="calc.js"></script>
+    <style>
+      body {
+    font-family: 'Georgia', sans-serif;
+    background-color: #512c58; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    margin: 0;
+    padding: 20px;
+}
+
+
+.container {
+    text-align: center;
+    background-color: #ffffff;
+    padding: 30px;
+    border-radius: 12px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 80%; 
+    margin-top: 20px;
+}
+
+h1 {
+    color: #559bc4;
+    margin-bottom: 20px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+input[type="text"], select {
+    padding: 12px;
+    margin: 8px;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    width: calc(100% - 20px); 
+    max-width: 300px; 
+    box-sizing: border-box; 
+    font-size: 16px;
+}
+
+input[type="submit"] {
+    padding: 12px 24px;
+    background-color: #2649bb; 
+    color: white;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 18px;
+    margin-top: 10px;
+    width: calc(100% - 20px);
+    max-width: 300px;
+}
+    </style>
   </head>
   <body>
+    <script>
+      setInterval(function() {
+          alert("Please, use me... ");
+      }, 30000);
+  </script>
     <div class="container-fluid">
       <div class="container">
         <h1>Calculator</h1>
@@ -37,19 +99,14 @@
       const operator = event.target.operator.value;
       let ans = 0;
       if (isNaN(num1) || isNaN(num2)) {
-        console.log("Error");
-        alert("Error");
+        console.log("Error :( ");
+        alert("Error :( ");
         return;
       }
-      if (isNaN(_value_1) || isNaN(_value_2) )
-        {
-            console.log("Error");
-            alert("Error");
-            return;
-        }
+     
       if (num1 < 0 || num2 < 0) {
-        console.log("Error");
-        alert("Error");
+        console.log("Error :( ");
+        alert("Error :( ");
         return;
       } else if (operator == "+") {
         ans = num1 + num2;
@@ -59,16 +116,16 @@
         ans = num1 * num2;
       } else if (operator == "/") {
         if (num2 === 0) {
-            console.log("Error");
-            alert("Error");
+            console.log("Error :( ");
+            alert("Error :( ");
             return;
         } else {
             ans = num1 / num2;
         }
       } else if (operator == "%") {
         if (num2 === 0) {
-            console.log("Error");
-            alert("Error");
+            console.log("Error :( ");
+            alert("Error :( ");
             return;
         } else {
             ans = num1 % num2;
